Organizando por topicos como o roteiro indica

--- a/classificador_fratura.ipynb
+++ b/classificador_fratura.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1b1c0a75-84a1-4a07-bb35-ba04d78e6cb7",
+   "metadata": {},
+   "source": [
+    "# 2. Configuração do Ambiente"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "755b6d8f-d0d3-4cee-acc2-b04454ba31ce",
@@ -13,6 +21,14 @@
     "import matplotlib.pyplot as plt\n",
     "import shutil \n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6228bb9a-956d-4d5b-ac6f-706fd436f050",
+   "metadata": {},
+   "source": [
+    "# 3. Carregamento e Exploração dos Dados "
    ]
   },
   {
@@ -35,7 +51,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".~lock.Patients.xlsx#\n",
       "1-Original_Anon_Dicom\n",
       "2-Rescaled_256_NRRD\n",
       "3-Segmentation_NRRD\n",
@@ -53,10 +68,25 @@
    "execution_count": 4,
    "id": "173a9c6d-8b2f-47ef-a340-728d93cc1e1a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images\\3-Segmentation_NRRD\n",
+      "images\\2-Rescaled_256_NRRD\n"
+     ]
+    }
+   ],
    "source": [
     "seg_folder = '3-Segmentation_NRRD'\n",
-    "seg_path = imgs_path / seg_folder"
+    "seg_path = imgs_path / seg_folder\n",
+    "\n",
+    "rescaled_folder = '2-Rescaled_256_NRRD'\n",
+    "rescaled_imgs = imgs_path / rescaled_folder\n",
+    "\n",
+    "print(seg_path)\n",
+    "print(rescaled_imgs)"
    ]
   },
   {
@@ -72,10 +102,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ed5ad15d-ff7e-41b6-9bb9-5fc96faf0e08",
+   "metadata": {},
+   "source": [
+    "# 3.2.1 Explorando arquivos .nrrd "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "192c57da-f8e5-4e53-aed2-0ec58b07a4ad",
    "metadata": {},
    "source": [
-    "**Preenchendo os dicionarios masks e masks_header**"
+    "**Importando as mascaras do diretorio *3-Segmentation_NRRD* junto com suas informacoes (header)**"
    ]
   },
   {
@@ -95,6 +133,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5133b22e-1f5b-403d-be74-23bb7c7dbc3e",
+   "metadata": {},
+   "source": [
+    "**Testando se as imagens das mascaras foram importadas corretamente...**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "cafa0265-ed85-40bb-9d51-f566a9838525",
@@ -103,7 +149,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x23688b44a40>"
+       "<matplotlib.image.AxesImage at 0x1e3b7902270>"
       ]
      },
      "execution_count": 7,
@@ -130,31 +176,17 @@
    "id": "7ea1f1ab-7904-48ff-b7ae-716d45ed684e",
    "metadata": {},
    "source": [
-    "**Preenchendo o dicionario images**"
+    "**Importando as imagens completas de ressonancia**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "acadf8c2-1190-4213-8315-d89600c789a9",
+   "id": "1924c17e-ed2d-4640-be99-b50d8464b7b0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WindowsPath('images/2-Rescaled_256_NRRD')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rescaled_folder = '2-Rescaled_256_NRRD'\n",
-    "rescaled_imgs = imgs_path / rescaled_folder\n",
-    "images = {}\n",
-    "rescaled_imgs"
+    "images = {}"
    ]
   },
   {
@@ -165,12 +197,20 @@
    "outputs": [],
    "source": [
     "for img_name in os.listdir(rescaled_imgs):\n",
-    "    if(file_name.endswith('.nrrd')):\n",
+    "    if(img_name.endswith('.nrrd')):\n",
     "        img_path = str(rescaled_imgs / img_name)\n",
     "        start = img_path.index(img_name) \n",
     "        end = img_path.index('.nrrd')\n",
     "        pacient_id = img_path[start:end]\n",
     "        images[pacient_id] = nrrd.read(img_path)[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f683bb0-09e6-4425-b4fa-a724d8b18d04",
+   "metadata": {},
+   "source": [
+    "**Testando se as imagens completas de ressonancia foram importadas corretamente...**"
    ]
   },
   {
@@ -182,7 +222,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x23685ab62d0>"
+       "<matplotlib.image.AxesImage at 0x1e3b7aea540>"
       ]
      },
      "execution_count": 10,
@@ -205,9 +245,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0557bfe7-d90d-4c7d-b035-5a886e97381b",
+   "metadata": {},
+   "source": [
+    "# 3.2.3. Entendendo a Relação entre Máscaras e Imagens Originais"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0af7cbf4-0177-42a3-b6e9-beffb425a942",
+   "metadata": {},
+   "source": [
+    "**Inspeciona a forma (dimensões) das imagens e máscaras**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b96cfa30-55e6-43c7-b705-c1a0ecc70291",
+   "id": "f98ae7ad-ffa8-45cb-8b24-61068712cd88",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +271,51 @@
      "output_type": "stream",
      "text": [
       "Shape da máscara P1L1: (70, 48, 5)\n",
-      "Shape da imagem P1: (640, 640, 14)\n",
+      "Shape da imagem P1: (640, 640, 14)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Shape da máscara P1L1:\", masks['P1L1'].shape)\n",
+    "print(\"Shape da imagem P1:\", images['P1'].shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22667c9d-f2c0-4255-bef5-1cdeda76b8dc",
+   "metadata": {},
+   "source": [
+    "**Explora o cabeçalho da máscaras**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "40e3b8af-88e5-4ea3-8506-ec0a1fc752ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "header_exemplo = masks_header['P1L1'] # ex paciente 1 vertebra l1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c9835f4-36f5-4b24-8111-139334703de9",
+   "metadata": {},
+   "source": [
+    "**Mostra todas as chaves disponíveis no cabeçalho**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "803f4bad-f6fa-4fd7-ac97-1b8d348e62eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Chaves disponíveis no header da máscara P1L1:\n",
       " - type\n",
@@ -237,28 +337,40 @@
       " - Segmentation_ContainedRepresentationNames\n",
       " - Segmentation_ConversionParameters\n",
       " - Segmentation_MasterRepresentation\n",
-      " - Segmentation_ReferenceImageExtentOffset\n",
+      " - Segmentation_ReferenceImageExtentOffset\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nChaves disponíveis no header da máscara P1L1:\")\n",
+    "for k in header_exemplo.keys():\n",
+    "    print(\" -\", k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d98a1a60-1fe5-4496-900f-5eb4ce603915",
+   "metadata": {},
+   "source": [
+    "**Pega a posição de referência (coordenada da mascara/pedaço em relacao a img original)**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b96cfa30-55e6-43c7-b705-c1a0ecc70291",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Offset de referência da máscara dentro da imagem original: 267 182 5\n"
      ]
     }
    ],
    "source": [
-    "# === 3.2.3. Entendendo a Relação entre Máscaras e Imagens Originais ===\n",
-    "\n",
-    "# Vamos inspecionar a forma (dimensões) das imagens e máscaras\n",
-    "print(\"Shape da máscara P1L1:\", masks['P1L1'].shape)\n",
-    "print(\"Shape da imagem P1:\", images['P1'].shape)\n",
-    "\n",
-    "# Agora exploramos o cabeçalho da máscara\n",
-    "header_exemplo = masks_header['P1L1']\n",
-    "\n",
-    "# Mostra todas as chaves disponíveis no cabeçalhob\n",
-    "print(\"\\nChaves disponíveis no header da máscara P1L1:\")\n",
-    "for k in header_exemplo.keys():\n",
-    "    print(\" -\", k)\n",
-    "\n",
-    "# Pegamos a posição de referência\n",
     "offset = header_exemplo.get('Segmentation_ReferenceImageExtentOffset', 'N/A')\n",
     "print(\"\\nOffset de referência da máscara dentro da imagem original:\", offset)"
    ]
@@ -268,10 +380,15 @@
    "id": "c50cdd72-efb8-477d-a7cb-c684ff380dcc",
    "metadata": {},
    "source": [
-    "# Capitulo 4\n",
-    "### Importando o excel com informacoes dos pacientes\n",
-    "\n",
-    "Cria a coluna **\"ClassNorm\"** nova e coloca no excel"
+    "# 4. Organizando os Arquivos por Classe\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba53d77f-4c97-489f-9715-a13f63bc24e2",
+   "metadata": {},
+   "source": [
+    "**Cria a coluna *\"ClassNorm\"* coloca dataframe com dados do xlsx dos Pacientes**"
    ]
   },
   {
@@ -450,36 +567,32 @@
    "id": "5d907080-6b55-4381-b662-4081a5fe5bdf",
    "metadata": {},
    "source": [
-    "## Percorrendo pacientes"
+    "**Cria subpastas de saída (BENIGN, MALIGNANT)**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "1b98113a-1eec-4397-a4b1-d100a7a815ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cria subpastas de saída\n",
     "for cls in ['BENIGN', 'MALIGNANT']:\n",
     "    (imgs_path/rescaled_folder/cls).mkdir(exist_ok=True, parents=True)\n",
-    "    (imgs_path/seg_folder/cls).mkdir(exist_ok=True, parents=True)\n",
-    "\n",
-    "# Função auxiliar para copiar arquivos com segurança\n",
-    "def copy_if_exists(src_path: pathlib.Path, dst_dir: pathlib.Path):\n",
-    "    if src_path.exists():\n",
-    "        dst = dst_dir / src_path.name\n",
-    "        if not dst.exists():\n",
-    "            shutil.copy2(src_path, dst)\n",
-    "        return True\n",
-    "    return False\n",
-    "\n",
-    "moved_images = moved_masks = 0"
+    "    (imgs_path/seg_folder/cls).mkdir(exist_ok=True, parents=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87057520-65eb-4c79-b7d4-7fb0bd6313b6",
+   "metadata": {},
+   "source": [
+    "**Lê linha a linha do xlxs de Pacientes e move as benignas e malignas dos pacientes para sua pasta correspondente**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "52663ddb-6870-4968-98d0-d5d7383442ba",
    "metadata": {},
    "outputs": [
@@ -493,7 +606,17 @@
     }
    ],
    "source": [
-    "# Percorre pacientes\n",
+    "# Função auxiliar para copiar arquivos com segurança\n",
+    "def copy_if_exists(src_path: pathlib.Path, dst_dir: pathlib.Path):\n",
+    "    if src_path.exists():\n",
+    "        dst = dst_dir / src_path.name\n",
+    "        if not dst.exists():\n",
+    "            shutil.copy2(src_path, dst)\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "moved_images = moved_masks = 0\n",
+    "\n",
     "for _, row in df.iterrows():\n",
     "    pid = str(row['Id']).strip()    # esperado 'P1', 'P2', ...\n",
     "    cls = row['ClassNorm']\n",
@@ -513,6 +636,24 @@
     "\n",
     "print(f\"Imagens copiadas: {moved_images}\")\n",
     "print(f\"Máscaras copiadas: {moved_masks}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a43be17-76a0-4f5d-9608-6b361b55850c",
+   "metadata": {},
+   "source": [
+    "# 5. Processamento das Imagens e Extração de Patches "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5e00c04e-38d2-431f-a4e5-a91e82cba4f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# continua ..."
    ]
   }
  ],
