--- a/classificador_fratura.ipynb
+++ b/classificador_fratura.ipynb
@@ -23,7 +23,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from collections import defaultdict\n",
-    "import SimpleITK as sitk"
+    "import SimpleITK as sitk\n",
+    "import random"
    ]
   },
   {
@@ -57,6 +58,7 @@
       "1-Original_Anon_Dicom\n",
       "2-Rescaled_256_NRRD\n",
       "3-Segmentation_NRRD\n",
+      "dataset_final\n",
       "patches_output_nrrd\n",
       "Patients.xlsx\n"
      ]
@@ -153,7 +155,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2068704e570>"
+       "<matplotlib.image.AxesImage at 0x1a03befc800>"
       ]
      },
      "execution_count": 7,
@@ -226,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2068704e090>"
+       "<matplotlib.image.AxesImage at 0x1a03fb30ad0>"
       ]
      },
      "execution_count": 10,
@@ -752,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "d6ad7738-774b-42a2-bb86-acce3cbad177",
    "metadata": {},
    "outputs": [
@@ -843,12 +845,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "bb251748-b319-4ca0-b797-848a05f3375c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estrutura de diretórios criada em: images\\dataset_final\n"
+     ]
+    }
+   ],
    "source": [
-    "# ..."
+    "source_root = imgs_path / \"patches_output_nrrd\"  # pasta do passo 5\n",
+    "target_root = imgs_path / \"dataset_final\"        # pasta de saída final\n",
+    "\n",
+    "splits = {\n",
+    "    \"train\": 0.7,\n",
+    "    \"val\": 0.15,\n",
+    "    \"test\": 0.15\n",
+    "}\n",
+    "\n",
+    "for split in splits.keys():\n",
+    "    for cls in classes:\n",
+    "        (target_root / split / cls).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "print(\"Estrutura de diretórios criada em:\", target_root)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "89f63cac-62bc-4ccd-a5aa-e3e6692f528a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Classe: BENIGN\n",
+      "  Treino: 32 pacientes\n",
+      "  Validação: 7 pacientes\n",
+      "  Teste: 8 pacientes\n",
+      "\n",
+      "Classe: MALIGNANT\n",
+      "  Treino: 30 pacientes\n",
+      "  Validação: 6 pacientes\n",
+      "  Teste: 8 pacientes\n",
+      "\n",
+      " Passo 6 concluído com sucesso!\n",
+      "Dataset final criado em: images\\dataset_final\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_patient_id(filename):\n",
+    "    \"\"\"Extrai o identificador do paciente (Pxx) do nome do arquivo.\"\"\"\n",
+    "    m = re.search(r\"P(\\d+)\", filename)\n",
+    "    return int(m.group(1)) if m else None\n",
+    "\n",
+    "patients_by_class = defaultdict(lambda: defaultdict(list))\n",
+    "\n",
+    "for cls in classes:\n",
+    "    class_dir = source_root / cls\n",
+    "    for img_path in class_dir.glob(\"*.png\"):\n",
+    "        pid = get_patient_id(img_path.name)\n",
+    "        if pid is not None:\n",
+    "            patients_by_class[cls][pid].append(img_path)\n",
+    "\n",
+    "for cls in classes:\n",
+    "    all_patients = list(patients_by_class[cls].keys())\n",
+    "    random.shuffle(all_patients)\n",
+    "\n",
+    "    n_total = len(all_patients)\n",
+    "    n_train = int(splits[\"train\"] * n_total)\n",
+    "    n_val   = int(splits[\"val\"]   * n_total)\n",
+    "    \n",
+    "    train_patients = all_patients[:n_train]\n",
+    "    val_patients   = all_patients[n_train:n_train + n_val]\n",
+    "    test_patients  = all_patients[n_train + n_val:]\n",
+    "\n",
+    "    \n",
+    "    # Copia arquivos para as pastas finais\n",
+    "    for pid_list, split_name in [\n",
+    "        (train_patients, \"train\"),\n",
+    "        (val_patients, \"val\"),\n",
+    "        (test_patients, \"test\")\n",
+    "    ]:\n",
+    "        for pid in pid_list:\n",
+    "            for img_path in patients_by_class[cls][pid]:\n",
+    "                dst = target_root / split_name / cls / img_path.name\n",
+    "                shutil.copy2(img_path, dst)\n",
+    "\n",
+    "    print(f\"\\nClasse: {cls}\")\n",
+    "    print(f\"  Treino: {len(train_patients)} pacientes\")\n",
+    "    print(f\"  Validação: {len(val_patients)} pacientes\")\n",
+    "    print(f\"  Teste: {len(test_patients)} pacientes\")\n",
+    "\n",
+    "print(\"\\n Passo 6 concluído com sucesso!\")\n",
+    "print(f\"Dataset final criado em: {target_root}\")"
    ]
   }
  ],
